fixed scrollbars

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,4 +1,12 @@
 canvas {
+    position: absolute;
     background-image: url("../images/background/Background.png");
 }
 
+body, html {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
